--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ targetCompatibility = 1.8
 dependencies {
     compile group: 'com.github.docker-java', name: 'docker-java', version: '3.0.6'
     compile group: 'com.spotify', name: 'docker-client', version: '8.3.1'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.8.2'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.8.2'
 }
 
 jar {
